NanoThe2nd/.antlr/Teal_v2Parser.java
// Generated from c:\Users\fried\OneDrive\Dokumente\Code\Visual Studio Projects\Nano Operational Functional Script\NanoThe2nd\Teal_v2.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Teal_v2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, NAME=65, NORMALSTRING=66, 
		CHARSTRING=67, LONGSTRING=68, INT=69, HEX=70, FLOAT=71, HEX_FLOAT=72, 
		COMMENT=73, LINE_COMMENT=74, WS=75, SHEBANG=76;
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_stat = 2, RULE_attnamelist = 3, RULE_attrib = 4, 
		RULE_typ = 5, RULE_basetype = 6, RULE_typelist = 7, RULE_retlist = 8, 
		RULE_typeargs = 9, RULE_newtype = 10, RULE_functiontype = 11, RULE_partypelist = 12, 
		RULE_partype = 13, RULE_parnamelist = 14, RULE_parname = 15, RULE_retstat = 16, 
		RULE_label = 17, RULE_funcname = 18, RULE_varlist = 19, RULE_namelist = 20, 
		RULE_explist = 21, RULE_exp = 22, RULE_prefixexp = 23, RULE_functioncall = 24, 
		RULE_varOrExp = 25, RULE_variable = 26, RULE_varSuffix = 27, RULE_nameAndArgs = 28, 
		RULE_args = 29, RULE_functiondef = 30, RULE_funcbody = 31, RULE_parlist = 32, 
		RULE_tableconstructor = 33, RULE_fieldlist = 34, RULE_field = 35, RULE_fieldsep = 36, 
		RULE_operatorOr = 37, RULE_operatorAnd = 38, RULE_operatorComparison = 39, 
		RULE_operatorStrcat = 40, RULE_operatorAddSub = 41, RULE_operatorMulDivMod = 42, 
		RULE_operatorBitwise = 43, RULE_operatorUnary = 44, RULE_operatorPower = 45, 
		RULE_number = 46, RULE_str = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"chunk", "block", "stat", "attnamelist", "attrib", "typ", "basetype", 
			"typelist", "retlist", "typeargs", "newtype", "functiontype", "partypelist", 
			"partype", "parnamelist", "parname", "retstat", "label", "funcname", 
			"varlist", "namelist", "explist", "exp", "prefixexp", "functioncall", 
			"varOrExp", "variable", "varSuffix", "nameAndArgs", "args", "functiondef", 
			"funcbody", "parlist", "tableconstructor", "fieldlist", "field", "fieldsep", 
			"operatorOr", "operatorAnd", "operatorComparison", "operatorStrcat", 
			"operatorAddSub", "operatorMulDivMod", "operatorBitwise", "operatorUnary", 
			"operatorPower", "number", "str"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", 
			"'repeat'", "'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", 
			"','", "'in'", "'function'", "'local'", "':'", "'global'", "'<'", "'>'", 
			"'('", "')'", "'|'", "'string'", "'boolean'", "'nil'", "'number'", "'{'", 
			"'}'", "'...'", "'record'", "'enum'", "'functiontype'", "'return'", "'::'", 
			"'.'", "'false'", "'true'", "'as'", "'is'", "'['", "']'", "'or'", "'and'", 
			"'<='", "'>='", "'~='", "'=='", "'..'", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'//'", "'&'", "'~'", "'<<'", "'>>'", "'not'", "'#'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
			"INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", "WS", 
			"SHEBANG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Teal_v2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Teal_v2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ChunkContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Teal_v2Parser.EOF, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			block();
			setState(97);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public RetstatContext retstat() {
			return getRuleContext(RetstatContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__7) | (1L << T__9) | (1L << T__13) | (1L << T__16) | (1L << T__17) | (1L << T__19) | (1L << T__22) | (1L << T__36))) != 0) || _la==NAME) {
				{
				{
				setState(99);
				stat();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__35) {
				{
				setState(105);
				retstat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RepeatStatContext extends StatContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public RepeatStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class BreakStatContext extends StatContext {
		public BreakStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class FuncStatContext extends StatContext {
		public FuncnameContext funcname() {
			return getRuleContext(FuncnameContext.class,0);
		}
		public FuncbodyContext funcbody() {
			return getRuleContext(FuncbodyContext.class,0);
		}
		public FuncStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class SemiStatContext extends StatContext {
		public SemiStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class ForInStatContext extends StatContext {
		public NamelistContext namelist() {
			return getRuleContext(NamelistContext.class,0);
		}
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForInStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class GlobalAttrStatContext extends StatContext {
		public AttnamelistContext attnamelist() {
			return getRuleContext(AttnamelistContext.class,0);
		}
		public TypelistContext typelist() {
			return getRuleContext(TypelistContext.class,0);
		}
		public GlobalAttrStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class IfStatContext extends StatContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public IfStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class LocalFuncStatContext extends StatContext {
		public TerminalNode NAME() { return getToken(Teal_v2Parser.NAME, 0); }
		public FuncbodyContext funcbody() {
			return getRuleContext(FuncbodyContext.class,0);
		}
		public LocalFuncStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class WhileStatContext extends StatContext {
		public ExpContext exp() {
			return getRuleContext(ExpContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class GotoStatContext extends StatContext {
		public TerminalNode NAME() { return getToken(Teal_v2Parser.NAME, 0); }
		public GotoStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class LocalAttrAssignStatContext extends StatContext {
		public AttnamelistContext attnamelist() {
			return getRuleContext(AttnamelistContext.class,0);
		}
		public TypelistContext typelist() {
			return getRuleContext(TypelistContext.class,0);
		}
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public LocalAttrAssignStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class LocalNewTypeStatContext extends StatContext {
		public TerminalNode NAME() { return getToken(Teal_v2Parser.NAME, 0); }
		public NewtypeContext newtype() {
			return getRuleContext(NewtypeContext.class,0);
		}
		public LocalNewTypeStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class GlobalAttrAssignStatContext extends StatContext {
		public AttnamelistContext attnamelist() {
			return getRuleContext(AttnamelistContext.class,0);
		}
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public TypelistContext typelist() {
			return getRuleContext(TypelistContext.class,0);
		}
		public GlobalAttrAssignStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class LabelStatContext extends StatContext {
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public LabelStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class ForStatContext extends StatContext {
		public TerminalNode NAME() { return getToken(Teal_v2Parser.NAME, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class GlobalFuncStatContext extends StatContext {
		public TerminalNode NAME() { return getToken(Teal_v2Parser.NAME, 0); }
		public FuncbodyContext funcbody() {
			return getRuleContext(FuncbodyContext.class,0);
		}
		public GlobalFuncStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class AssignStatContext extends StatContext {
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public AssignStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class DoStatContext extends StatContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public DoStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class GlobalAssignStatContext extends StatContext {
		public TerminalNode NAME() { return getToken(Teal_v2Parser.NAME, 0); }
		public NewtypeContext newtype() {
			return getRuleContext(NewtypeContext.class,0);
		}
		public GlobalAssignStatContext(StatContext ctx) { copyFrom(ctx); }
	}
	public static class FuncCallStatContext extends StatContext {
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public FuncCallStatContext(StatContext ctx) { copyFrom(ctx); }
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		int _la;
		try {
			setState(219);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new SemiStatContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(108);
				match(T__0);
				}
				break;
			case 2:
				_localctx = new AssignStatContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(109);
				varlist();
				setState(110);
				match(T__1);
				setState(111);
				explist();
				}
				break;
			case 3:
				_localctx = new FuncCallStatContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(113);
				functioncall();
				}
				break;
			case 4:
				_localctx = new LabelStatContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(114);
				label();
				}
				break;
			case 5:
				_localctx = new BreakStatContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(115);
				match(T__2);
				}
				break;
			case 6:
				_localctx = new GotoStatContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				match(T__3);
				setState(117);
				match(NAME);
				}
				break;
			case 7:
				_localctx = new DoStatContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(118);
				match(T__4);
				setState(119);
				block();
				setState(120);
				match(T__5);
				}
				break;
			case 8:
				_localctx = new WhileStatContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(122);
				match(T__6);
				setState(123);
				exp(0);
				setState(124);
				match(T__4);
				setState(125);
				block();
				setState(126);
				match(T__5);
				}
				break;
			case 9:
				_localctx = new RepeatStatContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(128);
				match(T__7);
				setState(129);
				block();
				setState(130);
				match(T__8);
				setState(131);
				exp(0);
				}
				break;
			case 10:
				_localctx = new IfStatContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(133);
				match(T__9);
				setState(134);
				exp(0);
				setState(135);
				match(T__10);
				setState(136);
				block();
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__11) {
					{
					{
					setState(137);
					match(T__11);
					setState(138);
					exp(0);
					setState(139);
					match(T__10);
					setState(140);
					block();
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(149);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__12) {
					{
					setState(147);
					match(T__12);
					setState(148);
					block();
					}
				}

				setState(151);
				match(T__5);
				}
				break;
			case 11:
				_localctx = new ForStatContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(153);
				match(T__13);
				setState(154);
				match(NAME);
				setState(155);
				match(T__1);
				setState(156);
				exp(0);
				setState(157);
				match(T__14);
				setState(158);
				exp(0);
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__14) {
					{
					setState(159);
					match(T__14);
					setState(160);
					exp(0);
					}
				}

				setState(163);
				match(T__4);
				setState(164);
				block();
				setState(165);
				match(T__5);
				}
				break;
			case 12:
				_localctx = new ForInStatContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(167);
				match(T__13);
				setState(168);
				namelist();
				setState(169);
				match(T__15);
				setState(170);
				explist();
				setState(171);
				match(T__4);
				setState(172);
				block();
				setState(173);
				match(T__5);
				}
				break;
			case 13:
				_localctx = new FuncStatContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(175);
				match(T__16);
				setState(176);
				funcname();
				setState(177);
				funcbody();
				}
				break;
			case 14:
				_localctx = new LocalFuncStatContext(_localctx);
				enterOuterAlt(_localctx, 14);
				{
				setState(179);
				match(T__17);
				setState(180);
				match(T__16);
				setState(181);
				match(NAME);
				setState(182);
				funcbody();
				}
				break;
			case 15:
				_localctx = new LocalAttrAssignStatContext(_localctx);
				enterOuterAlt(_localctx, 15);
				{
				setState(183);
				match(T__17);
				setState(184);
				attnamelist();
				setState(187);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__18) {
					{
					setState(185);
					match(T__18);
					setState(186);
					typelist();
					}
				}

				setState(191);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(189);
					match(T__1);
					setState(190);
					explist();
					}
				}

				}
				break;
			case 16:
				_localctx = new LocalNewTypeStatContext(_localctx);
				enterOuterAlt(_localctx, 16);
				{
				setState(193);
				match(T__17);
				setState(194);
				match(NAME);
				setState(195);
				match(T__1);
				setState(196);
				newtype();
				}
				break;
			case 17:
				_localctx = new GlobalFuncStatContext(_localctx);
				enterOuterAlt(_localctx, 17);
				{
				setState(197);
				match(T__19);
				setState(198);
				match(T__16);
				setState(199);
				match(NAME);
				setState(200);
				funcbody();
				}
				break;
			case 18:
				_localctx = new GlobalAttrStatContext(_localctx);
				enterOuterAlt(_localctx, 18);
				{
				setState(201);
				match(T__19);
				setState(202);
				attnamelist();
				setState(203);
				match(T__18);
				setState(204);
				typelist();
				}
				break;
			case 19:
				_localctx = new GlobalAttrAssignStatContext(_localctx);
				enterOuterAlt(_localctx, 19);
				{
				setState(206);
				match(T__19);
				setState(207);
				attnamelist();
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__18) {
					{
					setState(208);
					match(T__18);
					setState(209);
					typelist();
					}
				}

				setState(212);
				match(T__1);
				setState(213);
				explist();
				}
				break;
			case 20:
				_localctx = new GlobalAssignStatContext(_localctx);
				enterOuterAlt(_localctx, 20);
				{
				setState(215);
				match(T__19);
				setState(216);
				match(NAME);
				setState(217);
				match(T__1);
				setState(218);
				newtype();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttnamelistContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(Teal_v2Parser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(Teal_v2Parser.NAME, i);
		}
		public List<AttribContext> attrib() {
			return getRuleContexts(AttribContext.class);
		}
		public AttribContext attrib(int i) {
			return getRuleContext(AttribContext.class,i);
		}
		public AttnamelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attnamelist; }
	}

	public final AttnamelistContext attnamelist() throws RecognitionException {
		AttnamelistContext _localctx = new AttnamelistContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attnamelist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(221);
			match(NAME);
			setState(223);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__20) {
				{
				setState(222);
				attrib();
				}
			}

			setState(232);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__14) {
				{
				{
				setState(225);
				match(T__14);
				setState(226);
				match(NAME);
				setState(228);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__20) {
					{
					setState(227);
					attrib();
					}
				}

				}
				}
				setState(234);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttribContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(Teal_v2Parser.NAME, 0); }
		public AttribContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attrib; }
	}

	public final AttribContext attrib() throws RecognitionException {
		AttribContext _localctx = new AttribContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_attrib);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(235);
			match(T__20);
			setState(236);
			match(NAME);
			setState(237);
			match(T__21);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypContext extends ParserRuleContext {
		public TypContext typ() {
			return getRuleContext(TypContext.class,0);
		}
		public List<BasetypeContext> basetype() {
			return getRuleContexts(BasetypeContext.class);
		}
		public BasetypeContext basetype(int i) {
			return getRuleContext(BasetypeContext.class,i);
		}
		public TypContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typ; }
	}
